Add an obvious link to the page most people want to read: http://wiki.apache.org/general/BoardVoting
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434317 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+README for the Foundation voter tool
+
+Users/voters - read this: http://wiki.apache.org/general/BoardVoting
+
+Monitors/coders - read below:
+
 This directory is the source code for the Apache on-line voting tool.
 Although it is maintained in this repository, the actual working
 code has to be manually copied by the "voter" user to the
