[STeVe-15] Implement a better README. - a slightly modified commit as opposed to the patches available.
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1724008 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -2,8 +2,8 @@
  Welcome to Apache Steve <http://steve.apache.org/>
 =============================================================
 
-Apache Steve is software for conducting a vote using the STV - Single
-Transferrable Vote - voting algorithm. The tool grew out of the voting
+Apache Steve is software to conduct a vote using the STV (Single
+Transferrable Vote) and other voting algorithms. The tool grew out of the voting
 system used to elect the Apache Software Foundation Board of
 Directors.
 
@@ -12,15 +12,13 @@ http://en.wikipedia.org/wiki/Single_transferable_vote
 
 Getting Started
 ===============
-
-Getting Started documentation is not yet writte. Come to the
-#apache-steve channel on the Freenode IRC network, and we'd be glad to
-help you.
+Getting Started documentation can be found at: http://steve.apache.org/demo.html
+Otherwise, come to the #apache-steve channel on the Freenode IRC network, 
+and we'd be glad to help you.
 
 
 License (see also LICENSE.txt)
 ==============================
-
 Collective work: Copyright 2012-2013 The Apache Software Foundation.
 
 Licensed to the Apache Software Foundation (ASF) under one or more
@@ -41,14 +39,12 @@ limitations under the License.
 
 Documentation
 =============
-
 Documentation may be found at http://steve.apache.org/documentation.html
 
 Contributions to the documentation are very welcome.
 
 Mailing Lists
 =============
-
 Discussion about Steve takes place on the following mailing lists:
 
     dev@steve.apache.org    - About using Steve and developing Steve
@@ -70,8 +66,13 @@ http://steve.apache.org/support.html
 
 Issue Tracker
 =============
-
 If you encounter errors in Steve or want to suggest an improvement or a new
 feature, please visit the Steve issue tracker at
 https://issues.apache.org/jira/browse/STEVE
+
+Implemented changes
+===================
+Implemented changes can be found at:
+    https://svn.apache.org/viewvc/steve/
+
 
